# xuibot

./: .env.example  .gitignore  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt  run_all.py  run_bot.py  run_sync.py
.github/: PULL_REQUEST_TEMPLATE.md
bot/: __init__.py  admin.py  admin_auth.py  admin_backup.py  admin_debug.py  admin_diagnostics.py  admin_faq.py  admin_happ_crypto.py  admin_keyboards.py  admin_legal.py  admin_limit_ip.py  admin_lockdown.py  admin_logs.py  admin_menu.py  admin_nodes.py  admin_payments.py  admin_reboot.py  admin_server_status.py  admin_start_text.py  admin_tickets.py  admin_users.py  commands.py  faq.py  faq_album.py  faq_delivery.py  faq_view.py  fsm_storage.py  fulfillment_delivery.py  handlers.py  keyboards.py  messages.py  photo_delivery.py  policy.py  polling_lock.py  priority_commands.py  refund_chat.py  scheduler.py  sender.py  server_status.py  shutdown.py  (+5 more)
config/: happ_crypto.py  legal.py  logging_setup.py  payments.py  plans.py  referral.py  settings.py  trial.py
db/: bot_settings.py  connection.py  database.py  faq.py  init_lock.py  payment_methods.py  plan_prices.py  promo_codes.py  promo_pending.py  referrals.py  tickets.py  trial_grants.py  webhook_dedup.py  xui_nodes.py
deploy/: install-systemd.sh  restart-services.sh  state.env.example  vpn-bot-ctl.sh
docs/: GUIDE.md  README.md  admin.md  architecture.md  configuration.md  deployment.md  development.md  infrastructure-and-mechanics.md  installation.md  json-subscription-template-setup.md  json-subscriptions-plan.md  platega.md  requirements.md  (+5 more)
(+105 files in other folders)
